# lagerberekeningprogramma

./: .gitignore  .gitnore  CMakeLists.txt  README.md
documentatie/: Berekening krachtenverdeling.xlsx  Map1.xlsx  aangepast.xlsx  formule viscositeit.docx  kogellagersbelasting.xlsx  website.txt
src/: lagerfuncties.c  lagerfuncties.h  main.c  raygui.h
src/lagers/csv/: carblager.csv  cilinderlagers.csv  dubbelrijighoekcontactkogellagers.csv  dubbelrijigkogellager.csv  dubbelrijigtonlagers.csv  hoekcontactkogellagers.csv  kegellagers.csv  kogellagers.csv  tonlagers.csv  vierpuntslagers.csv  zichinstellandekogellagers.csv
src/lagers/headers/: carblager.h  cilinderlagers.h  dubbelrijighoekcontactkogellagers.h  dubbelrijigkogellager.h  dubbelrijigtonlagers.h  hoekcontactkogellagers.h  kegellagers.h  kogellagers.h  tonlagers.h  vierpuntslagers.h  zichinstellandekogellagers.h
